--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4"
   },
