--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 # docker-compose.yml
-version: '3.8'
 
 services:
   backend:
@@ -8,7 +7,8 @@ services:
     env_file:
       - ./back-end/.env       
     volumes:
-      - db_data:/data        
+      - db_data:/data
+      - ./front-end/public:/front-end/public:ro
     ports:
       - "8000:8000"            
     
